llmx-rs/tui/src/bottom_pane/snapshots/llmx_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
                                                
› Ask LLMX to do anything                       
                                                
  100% context left · ? for shortcuts
